Closed Bug 1332218 Opened 7 years ago Closed 7 years ago

Reset database if we failed to get the current prefix set on v2.

Categories

(Toolkit :: Safe Browsing, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla54
Tracking Status
firefox54 --- fixed

People

(Reporter: hchang, Assigned: hchang)

References

Details

Attachments

(1 file)

We occasionally hit crashes in nsUrlClassifierPrefixSet::GetPrefixesNative [1]
but have no idea what's going on. Since the crash is due to the array overflow,
what we may do now is to return an error to have the database reset and
try to debug with data collected with Bug 1332213. 

[1] https://bugzilla.mozilla.org/show_bug.cgi?id=1304602
Assignee: nobody → hchang
See Also: → 1304602
Status: NEW → ASSIGNED
Priority: -- → P2
Comment on attachment 8829328 [details]
Bug 1332218 - Add boundary checks for array access in nsUrlClassifierPrefixSet::GetPrefixesNative. .

https://reviewboard.mozilla.org/r/105740/#review107690
Attachment #8829328 - Flags: review?(francois) → review+
Pushed by hchang@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/3d717c8eaa76
Add boundary checks for array access in nsUrlClassifierPrefixSet::GetPrefixesNative. r=francois.
https://hg.mozilla.org/mozilla-central/rev/3d717c8eaa76
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: