Bug 1332218 - Add boundary checks for array access in nsUrlClassifierPrefixSet::GetPrefixesNative. r=francois.

MozReview-Commit-ID: CpQYdTaEI3c